@@ -91,10 +91,33 @@ on big endian machines, or a byte-by-byte read if the endianess is unknown.
 /* gcc 'may' define __LITTLE_ENDIAN__ or __BIG_ENDIAN__ to 1 (Note the trailing __),
  * or even _LITTLE_ENDIAN or _BIG_ENDIAN (Note the single _ prefix) */
 #if !defined(__BYTE_ORDER)
+/*
   #if defined(__LITTLE_ENDIAN__) && __LITTLE_ENDIAN__==1 || defined(_LITTLE_ENDIAN) && _LITTLE_ENDIAN==1
     #define __BYTE_ORDER __LITTLE_ENDIAN
   #elif defined(__BIG_ENDIAN__) && __BIG_ENDIAN__==1 || defined(_BIG_ENDIAN) && _BIG_ENDIAN==1
     #define __BYTE_ORDER __BIG_ENDIAN
+  #endif
+*/
+  #if defined(__LITTLE_ENDIAN__) 
+    #if __LITTLE_ENDIAN__==1 
+      #define __BYTE_ORDER __LITTLE_ENDIAN
+    #elif defined(_LITTLE_ENDIAN) 
+      #if x_LITTLE_ENDIAN != x
+        #if _LITTLE_ENDIAN==1
+          #define __BYTE_ORDER __LITTLE_ENDIAN
+        #endif
+      #endif
+    #endif
+  #elif defined(__BIG_ENDIAN__) 
+    #if __BIG_ENDIAN__==1
+      #define __BYTE_ORDER __BIG_ENDIAN
+    #endif
+  #elif defined(_BIG_ENDIAN) 
+    #if x_BIG_ENDIAN != x 
+      #if _BIG_ENDIAN==1
+        #define __BYTE_ORDER __BIG_ENDIAN
+      #endif
+    #endif
   #endif
 #endif
 
